<resources>
    <string name="flurry_key">H8CBZRWZSMH765V8F3YQ</string>
    <string name="privetalk_scheme">privetalk</string>
    <string name="privetalk_namespace">http://schemas.android.com/apk/res-auto</string>
    <string name="roboto_regular">RobotoCondensed-Regular.ttf</string>
    <string name="roboto_light">RobotoCondensed-Light.ttf</string>
    <string name="roboto_bold">RobotoCondensed-Bold.ttf</string>
    <string name="app_name">PriveTalk</string>
    <string name="action_settings">Settings</string>
    <string name="honest_message">real people, honest dating!</string>
    <string name="loading">Loading...</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_thank_you">and thank you for choosing\nPriveTalk</string>
    <string name="privetalk">PriveTalk</string>
    <string name="privetalk_is">PriveTalk is</string>
    <string name="different">different!</string>
    <string name="verify">Verified profiles\nfor all users</string>
    <string name="friendliness">Friendliness promoted\n&amp;rewarded </string>
    <string name="secure">Secure, self-expiring\nmessages</string>
    <string name="no_photo">No screenshots\nallowed</string>
    <string name="honest">real people, honest dating!</string>
    <string name="what_are_you_waiting">What are you waiting?</string>
    <string name="create_account">Create account</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="back">Back</string>
    <string name="my_birthday">My date of {b}birth{/b} is</string>
    <string name="my_age">My {b}age{/b} is</string>
    <string name="my_location">I {b}live{/b} in</string>
    <string name="my_genre">{b}I am{/b} a</string>
    <string name="looking_for">{b}Looking{/b} for a</string>
    <string name="my_mail">my {b}e-mail{/b} is</string>
    <string name="password_note">{b}*Note:{/b} use a unique password</string>
    <string name="application_password">application {b}password{/b}</string>
    <string name="confirm_password">again, my {b}password{/b} is</string>
    <string name="verification_code">Get {b}verification{/b} code</string>
    <string name="terms_and_conditions">I have read and accept {b}<a href="http://www.example.com/"><u><b>Terms &amp; Conditions</b></u></a>, <u>Privacy Policy</u>{/b} and {b}<u>Dating Safety Guide</u>{/b}</string>
    <string name="start_dating">{b}Start{/b} Dating</string>
    <string name="stringie">{b}Create {/b}{l}Account{/l}</string>
    <string name="thanks_for_choosing">and {b}thank you{/b} for choosing PriveTalk</string>
    <string name="verified_profiles">{b}Verified{/b} Profile\n {b}Pictures{/b}</string>
    <string name="friendliness_promoted"><![CDATA[Weekly {l}Personality \n{/l} Rewards]]></string>
    <string name="secure_messaging">{b}Self-Expiring{/b}\nMessages</string>
    <string name="no_screenshots">{b}No Screenshots{/b} \nAllowed</string>
    <string name="real_people">{b}real{/b} people, {b}honest{/b} dating!</string>
    <string name="what_you_waiting">What are you {b}waiting for?{/b}</string>
    <string name="create_new_account">{b}Create {/b}account</string>
    <string name="use_one_of_the_following">Use one of the Following: *</string>
    <string name="verification_credit">Verification Credit</string>
    <string name="email_account">{b}e-mail {/b}account</string>
    <string name="sing_in">{b}Sign {/b}in</string>
    <string name="we_never_post">Note:* We {b}never{/b} post anything to your social media account.</string>
    <string name="sign_in_2">Sign {b}in{/b}</string>
    <string name="my_name_is">My {b}name{/b} is</string>
    <string name="weak">weak</string>
    <string name="strong">strong</string>
    <string name="title_facebook_login">facebookLogin</string>
    <string name="connections">Connections</string>
    <string name="notifications">Notifications</string>
    <string name="coins_lowercase">coins</string>
    <string name="profilePersonalInfo">Personal Info</string>
    <string name="not_yet_set">Unspecified</string>
    <string name="not_set_yet">Not set yet</string>
    <string name="profile_location">Location</string>
    <string name="profile_age">Age</string>
    <string name="profile_relationship">Relationship</string>
    <string name="profile_sexuality">Sexuality</string>
    <string name="facebook_app_id">1223656987651000</string>
    <string name="profile_appearance">Appearance</string>
    <string name="profileWork">Work</string>
    <string name="profileEducation">Education</string>
    <string name="profileDrinking">Drinking</string>
    <string name="profileSmoking">Smoking</string>
    <string name="profileLanguage">Languages</string>
    <string name="profile_religion">Religion</string>
    <string name="profileZodiac">Zodiac</string>
    <string name="profileInterests">Interests (15 total)</string>
    <string name="profilePlaces">Places</string>
    <string name="profileLiterature">Literature</string>
    <string name="profileMovies">Movies</string>
    <string name="profileMusics">Music</string>
    <string name="profileActivities">Activities</string>
    <string name="fewThingsAboutMe">A Few things about me</string>
    <string name="verified_profile_pictures">{b}Verified{/b} Profile\n{b}Pictures{/b}</string>
    <string name="chat_with_real_people">Chat for free with real people who\nall have verified profile pictures</string>
    <string name="weekly_personality_rewards">{b}Weekly{/b} Personality\n{b}Rewards{/b}</string>
    <string name="get_rewarded_and_promoted">Get rewarded for having fun\nand being a friendly user</string>
    <string name="exprees_yourself_freely">Express yourself freely with\nself-expiring text and images</string>
    <string name="no_photo_allowed">{b}No Screenshots{/b}\nAllowed</string>
    <string name="enter_verification">Enter {b}verification{/b} code</string>
    <string name="thisWeek">This Week</string>
    <string name="weeklyAwards">Weekly Rewards</string>
    <string name="usePurchaseBonus">{b}Use{/b} Purchase Bonus</string>
    <string name="your_favorites">{b}Your{/b} {l}Favourites{/l}</string>
    <string name="who_favoried_you">{b}Who{/b} {l}Favourited You{/l}</string>
    <string name="todays_visitors">{l}Today\'s{/l} {b}Visitors{/b}</string>
    <string name="week_visitors">{b}Visitors{/b} {l}This week{/l}</string>
    <string name="profile_height">Height</string>
    <string name="profile_weight">Weight</string>
    <string name="profile_hair">Hair</string>
    <string name="profile_eyes">Eyes</string>
    <string name="profile_body_type">Body Type</string>
    <string name="myProfile">My profile</string>
    <string name="line">line</string>
    <string name="community">Community</string>
    <string name="hotWheel">Hot Wheel</string>
    <string name="messages">Messages</string>
    <string name="profileVisitors">Profile Visitors</string>
    <string name="flamesIgnited">Flames Ignited</string>
    <string name="hotMatches">Hot Matches</string>
    <string name="favorites">Favourites</string>
    <string name="beRoyalUser">Be a Royal User</string>
    <string name="addPTCoins">Add PT Coins</string>
    <string name="settings">Settings</string>
    <string name="logOut">Log Out</string>
    <string-array name="rowAwardsTitles">

        
        
        
        
        

    </string-array>
    <string-array name="settings_language">
        <item>Ελληνικά</item>
        <item>English</item>
        <item>Русский</item>
    </string-array>
    <string-array name="interests_array">
        <item>Activity</item>
        <item>Literature</item>
        <item>Music</item>
        <item>Places</item>
        <item>Movies</item>
    </string-array>
    <string-array name="settings_languages_codes">
        <item>el</item>
        <item>en</item>
        <item>ru</item>
    </string-array>
    <string name="name">Name:</string>
    <string name="age">Age:</string>
    <string name="location">Location:</string>
    <string name="relationship">Relationship:</string>
    <string name="sexuality">Sexuality:</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="body_type">Body Type:</string>
    <string name="colour_fo_hair">Colour of Hair:</string>
    <string name="colour_of_eyes">Colour of Eyes:</string>
    <string name="smoking">Smoking:</string>
    <string name="drinking">Drinking:</string>
    <string name="education">Education:</string>
    <string name="work">Work:</string>
    <string name="languages">Languages:</string>
    <string name="religion">Religion:</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="boost_your_popularity">Boost your Popularity</string>
    <string name="boost_your_popularity_message">{b}Boost{/b} your Popularity</string>
    <string name="seen_by_thousands">Get your profile promoted to all PriveTalk users in your broader area.</string>
    <string name="chose_one_of_the_below">Choose picture to promote:</string>
    <string name="promotion_cost">The promotion will cost 100 PT coins</string>
    <string name="women_will_see_this">{b}1500{/b} Women will see this directly</string>
    <string name="see_directly">{r}will see this directly{/r}</string>
    <string name="privacy_settings">{b}Privacy{/b} Settings</string>
    <string name="show_distance">Show {b}Distance{/b}</string>
    <string name="show_weekly_rewards">Show Weekly {b}Rewards{/b}</string>
    <string name="show_online_status">Show Online {b}Status{/b}</string>
    <string name="hide_from_public_search">Hide from {b}Public Search{/b}</string>
    <string name="hide_from_hot_wheel">Hide from {b}Hot Wheel{/b}</string>
    <string name="settings_messages">Messages</string>
    <string name="settings_profile_visitors">Profile Visitors</string>
    <string name="settings_flames_ignited">Flames Ignited</string>
    <string name="settings_hot_matches">Hot Matches</string>
    <string name="settings_favorite_you">Favourite You</string>
    <string name="settings_alerts">Alerts</string>
    <string name="settings_news">News</string>
    <string name="settings_weekly_awards">Weekly Rewards</string>
    <string name="notification_settings">{b}Notification{/b} Settings</string>
    <string name="language_selection">{b}Language{/b} Selection</string>
    <string name="account_settings">{b}Account{/b} Settings</string>
    <string name="dedactivate_account">Deactivate {b}Account{/b}</string>
    <string name="delete_account"><u>Delete Account</u></string>
    <string name="hot_match_deleted">Deleted</string>
    <string name="deleted_match">Deleted</string>
    <string name="search_in_location">{b}in{/b} {l}Location{/l}</string>
    <string name="search_looking_for">{b}Looking{/b} for a</string>
    <string name="personalInfoEdit">Edit Personal Info</string>
    <string name="search_filter_within">within\n</string>
    <string name="age_from">{b}Age{/b} {l}from{/l}</string>
    <string name="age_to">{l}to{/l}</string>
    <string name="height_from">{b}Height{/b} {l}from{/l}</string>
    <string name="weight_from">{b}Weight{/b} {l}from{/l}</string>
    <string name="edit_interests">Edit Interests</string>
    <string name="body_type_filter">{b}Body{/b} Type</string>
    <string name="hair_colour">Colour of {b}Hair{/b}</string>
    <string name="eyes_colour">Colour of {b}Eyes{/b}</string>
    <string name="education_level">{b}Education{/b} Level</string>
    <string name="smoking_habit">{b}Smoking{/b} Habit</string>
    <string name="drinking_habit">{b}Drinking{/b} Habit</string>
    <string name="zodiac_sign">{b}Zodiac{/b} Sign</string>
    <string name="self_expiring_message">{b}Self-Expiring{/b}\nMessages</string>
    <string name="enjoy_enhanced_privacy">Enjoy enhanced privacy with our\nscreenshot-blocking feature</string>
    <string name="my_profile">My profile</string>
</resources>