<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageNoPhoto"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:src="@drawable/nophoto_icon" />

    <com.privetalk.app.utilities.PriveTalkTextView
        android:id="@+id/titleNoPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageNoPhoto"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/no_photo_allowed"
        android:textColor="@color/welcome_text"
        android:textSize="30sp"
        app:ttf_name="@string/roboto_light" />

    <com.privetalk.app.utilities.PriveTalkTextView
        android:id="@+id/messageNoPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/imageNoPhoto"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/enjoy_enhanced_privacy"
        android:textColor="@color/welcome_text"
        android:textSize="16sp"
        app:ttf_name="@string/roboto_regular" />

</RelativeLayout>