<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageWeekly"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:src="@drawable/angel_icon" />

    <com.privetalk.app.utilities.PriveTalkTextView
        android:id="@+id/titleWeekly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageWeekly"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/weekly_personality_rewards"
        android:textColor="@color/welcome_text"
        android:textSize="30sp"
        app:ttf_name="@string/roboto_light" />

    <com.privetalk.app.utilities.PriveTalkTextView
        android:id="@+id/messageWeekly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/imageWeekly"
        android:layout_marginBottom="50dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:gravity="center"
        android:text="@string/get_rewarded_and_promoted"
        android:textColor="@color/welcome_text"
        android:textSize="16sp"
        app:ttf_name="@string/roboto_regular"  />

</RelativeLayout>