<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="56">


        <ImageView
            android:layout_width="230dp"
            android:layout_height="230dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/welcome_icon" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="34"
        android:gravity="center"
        android:orientation="vertical">

        <com.privetalk.app.utilities.PriveTalkTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/welcome_text"
            android:textSize="43sp"
            app:ttf_name="@string/roboto_bold" />


        <com.privetalk.app.utilities.PriveTalkTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/thanks_for_choosing"
            android:textColor="@color/welcome_text"
            android:textSize="20sp"
            app:ttf_name="@string/roboto_regular" />


    </LinearLayout>

</LinearLayout>