<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeightLarge">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profilePic"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/dummy_img"
        app:civ_border_color="@color/blue_border_color"
        app:civ_border_width="1dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@+id/profilePic"
        android:orientation="vertical">

        <com.privetalk.app.utilities.PriveTalkTextView
            android:id="@+id/drawerUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/drawer_textcolor"
            android:textSize="20sp"
            app:ttf_name="@string/roboto_bold" />

        <com.privetalk.app.utilities.PriveTalkTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-4dp"
            android:text="@string/my_profile"
            android:textColor="@color/drawer_textcolor"
            android:textSize="13sp"
            app:ttf_name="@string/roboto_light" />
    </LinearLayout>

</RelativeLayout>